added a navigation bar

--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHELFSPACESTORE</title>
+    <title>SHELFSPACE STORE</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <h1>SHELFSPACE STORE</h1>
-    </div>
+    <nav class="navbar">
+         <div class="navdiv">
+            <div class="logo"><a href="#">SHELFSPACE</a></div>
+            <ul>
+                <li><a href="#">All Books</a></li>
+                <li><a href="#">Favorites</a></li>
+                <li><a href="#">New Releases</a></li> 
+            </ul>
+         </div>
+    </nav>
 </body>
 </html>
