changed nav bar background color to blue

--- a/index.html
+++ b/index.html
@@ -7,13 +7,127 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar">
+<!--Navigation Bar-->
+<section>
+<nav class="navbar">
          <div class="navdiv">
-            <div class="logo"><a href="#">SHELFSPACE</a></div>
+            <div class="logo">SHELFSPACE</div>
             <ul>
-                <li><a href="#">All Books</a></li>
-                <li><a href="#">Favorites</a></li>
-                <li><a href="#">New Releases</a></li> 
+                <li><a href="#">Self-discovery Shelf</a></li>
+                <li><a href="#">Best Sellers</a></li>
+                <li><a href="#">Children's Bestsellers</a></li> 
+</section>
+
+<!--Main Content-->
+                <div>
+<div class="main-content">
+        <section>
+                <h2 class="subheadings">Self-discovery Shelf</h2>
+                <hr class="preorders">
+        </section>
+                    <div class="books">
+                        <div class="book">
+                            <img src="imagess/9781647432225_418e030b-0450-4b8c-aaf1-554078e54e16.avif">
+                            <p>READ PEOPLE LIKE A BOOK</p>
+                            <p>Patrick King</p>
+                            <p>Description</p>
+                            <p>$19.63</p>
+                    </div>
+                    <div class="book">
+                            <img src="imagess/WIML.avif">
+                            <p>HOW DID WE GET HERE</p>
+                            <p>Mpoomy ledwaba</p>
+                            <p>R300.00</p>
+                    </div>
+                    <div class="book">
+                            <img src="imagess/9780241958223.avif">
+                            <p>START WITH WHY</p>
+                            <p>Simon Sinek</p>
+                            <p>R306.00</p>
+                    </div>
+                    <div class="book">
+                            <img src="imagess/37.webp">
+                            <P>THE SUM OF ALL THINGS</P>
+                            <p>Nicole Brooks</p>
+                            <p>R265.00</p>
+                    </div>
+                    <div class="book">
+                            <img src="imagess/CCCER.avif">
+                            <p>THE DIARY OF A CEO</p>
+                            <p>Steven Bartlett</p>
+                            <p>R499.99</p>
+
+        <section>
+                <h2 class="subheadings">Best Sellers</h2>
+                <hr class="preorders">
+        </section>                   
+                            
+                    </div>
+                    <div class="book">
+                            <img src="imagess/9780857197689_bcda19e1-1070-4eb0-85cd-01595a388c12.avif">
+                            <p> THE PSYCHOLOGY OF MONEY</p>
+                            <p>Morgan Housel</p>
+                            <p>R405.00</p>
+                    </div>
+                    <div class="book">
+                            <img src="imagess/9781847941831_9bdaf36f-f5fa-4d74-9b2b-69d9cc85242c.avif">
+                            <p>ATOMIC HABITS</p>
+                            <p>James Clear</p>
+                            <p>R499.00</p>
+                    </div>
+                    <div class="book">
+                            <img src="imagess/9780008604462.avif">
+                            <p>I HOPE THIS FINDS YOU WELL</p>
+                            <p>Natalie Sue</p>
+                            <p>R289.99</p>
+                    </div>
+                    <div class="book">
+                            <img src="imagess/9780241982105.avif" alt="book cover">
+                            <p>EVERYTHING I KNOW ABOUT LOVE</p>
+                            <p>Dolly Alberton</p>
+                            <p>R305.00</p>
+                    </div>
+                    <div class="book">
+                            <img src="imagess/image99.jpg" alt="book cover">
+                            <p>GREEN LIGHTS</p>
+                            <p>Matthew McConaughey</p>
+                            <p>R315.00</p>
+                        </div>
+                         <section>
+                        <h2 class="subheadings">Children's Bestsellers</h2>
+                        <hr class="preorders">
+                        </section>
+                        <div class="book">
+                            <img src="imagess/9780141324920_3773899a-aaeb-4313-9c87-ce7972c68a32.avif">
+                            <p>A DIARY OF A WIMPY KID: THE LAST STRAW BOOK (BOOK 3)</p>
+                            <p>Jeff Kinney</p>
+                            <p>R208.00</p>
+                    </div>
+                    <div class="book">
+                            <img src="imagess/9780141324913_d3970e90-2052-402a-a1e4-9782585bb5aa.avif">
+                            <p>A DIARY OF A WIMPY KID: RODRICK RULES (BOOK 2)</p>
+                            <p>Jeff Kinney</p>
+                            <p>R202.00</p>
+                    </div>
+                    <div class="book">
+                            <img src="imagess/JM06.avif">
+                            <p>A DIARY OF A WIMPY KID: NO BRAINER (BOOK 18)</p>
+                            <p>Jeff Kinney</p>
+                            <p>R179.99</p>
+                    </div>
+                    <div class="book">
+                            <img src="imagess/OPPL.avif">
+                            <p>A DIARY OF A WIMPY KID: BIG SHOT (BOOK 16)</p>
+                            <p>Jeff Kinney</p>
+                            <p>R219.99</p>
+                    </div>
+                    <div class="book">
+                            <img src="imagess/UYAH.avif">
+                            <p>A DIARY OF A WIMPY KID (BOOK 1)</p>
+                            <p>Jeff Kinney</p>
+                            <p>R209.99</p>
+                    </div>
+                </div>
             </ul>
          </div>
     </nav>
